# utf-8-everywhere

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/mam/string-convert/: string-convert.h
include/mam/utf_8_everywhere/: convert.h
include/utf_8_everywhere/: convert.h
source/: convert.cpp  main.cpp  string-convert.cpp
